modules/gdscript/tests/scripts/runtime/errors/array_bad_index.gd
func test():
	var array := [1, 2, 3]
	array.set(4, 4)
	var _value = array.get(4)
	_value = array[4]
